--- a/styles.css
+++ b/styles.css
@@ -18,6 +18,7 @@ body {
 	background-repeat: no-repeat;
 	background-position: center;
 	color: #656565;
+	font-family: 'Roboto', sans-serif;
 }
 
 body {
